# tf-matcomp-ml

./: .gitignore  main.py  pyproject.toml  requirements.in
src/: compare_nuc_bert.py  ood.py  train.py  train_embed.py  utils.py
src/configs/: gpt.yaml  train.yaml
