[project]
name = "tf-matcomp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8,<3.9"
dependencies = [
    "appdirs==1.4.4",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.2",
    "clarabel==0.6.0",
    "click==8.1.7",
    "contourpy==1.1.1",
    "cvxpy==1.4.1",
    "cycler==0.12.1",
    "docker-pycreds==0.4.0",
    "dotmap==1.3.30",
    "ecos==2.0.12",
    "fonttools==4.47.0",
    "fsspec==2023.10.0",
    "gitdb==4.0.11",
    "gitpython==3.1.40",
    "huggingface-hub==0.19.4",
    "idna==3.4",
    "importlib-resources==6.1.1",
    "joblib==1.3.2",
    "kiwisolver==1.4.5",
    "matplotlib==3.7.4",
    "numpy==1.24.3",
    "osqp==0.6.3",
    "packaging==23.2",
    "pillow==10.1.0",
    "protobuf==4.25.1",
    "psutil==5.9.6",
    "pybind11==2.11.1",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "pyyaml==6.0.1",
    "qdldl==0.1.7.post0",
    "regex==2023.10.3",
    "requests==2.31.0",
    "safetensors==0.4.0",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "scs==3.2.4.post1",
    "sentry-sdk==1.37.1",
    "setproctitle==1.3.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "threadpoolctl==3.2.0",
    "tokenizers==0.15.0",
    "torch==2.1.1",
    "tqdm==4.66.1",
    "transformers==4.35.2",
    "urllib3==2.1.0",
    "wandb==0.16.0",
    "zipp==3.17.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
