[project]
name = "tf-matcomp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    # Core ML/scientific computing
    "numpy>=1.26,<2",
    "scipy>=1.16",
    "scikit-learn>=1.8",
    "torch>=2.5",

    # Transformers/HuggingFace
    "transformers==4.57.3",
    "tokenizers>=0.22",
    "safetensors>=0.7",
    "huggingface-hub>=0.36",

    # Optimization
    "cvxpy>=1.7",
    "clarabel>=0.11",
    "osqp>=1.0",
    "scs>=3.2",
    "ecos>=2.0",

    # Visualization
    "matplotlib>=3.10",
    "pillow>=12.0",

    # Experiment tracking
    "wandb>=0.23",

    # Utilities
    "dotmap>=1.3",
    "tqdm>=4.67",
    "pyyaml>=6.0",
    "requests>=2.32",
    "click>=8.3",
    "psutil>=7.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
